Final Project. Doesnt work on Android M+

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:adjustViewBounds="true"
         android:contentDescription="@string/ringerOn"
         android:cropToPadding="true"
-        app:srcCompat="@drawable/ringeron"
+        app:srcCompat="@mipmap/ringeron"
         tools:layout_editor_absoluteX="60dp"
         tools:layout_editor_absoluteY="34dp" />
 
